# gorilla-games

./: README.md  build-war.sh
backend/: README.md
backend/config/: application.properties.cfg
backend/src/main/kotlin/com/example/groove/: GorillaGames.kt
backend/src/main/kotlin/com/example/groove/controllers/: GameMoveController.kt  QueueController.kt  VersionController.kt
backend/src/main/kotlin/com/example/groove/db/dao/: GameMoveRepository.kt  GameRepository.kt  (+1 more)
backend/src/main/kotlin/com/example/groove/exception/: ExceptionTypes.kt
backend/src/main/kotlin/com/example/groove/security/: SecurityConfiguration.kt
backend/src/main/kotlin/com/example/groove/services/: PlayerQueueService.kt  PlayerQueueServiceImpl.kt
backend/src/main/resources/: application.properties
backend/src/main/resources/db/migration/: V1_00_000__Init.sql  V1_01_281__AddGames.sql  V1_02_185__AddMoves.sql  V1_03_829__ReadCommittedIsolationLevel.sql  V1_04_194__AddMatchedToQueue.sql  V1_04_918__PlayerGuid.sql
backend/src/test/kotlin/com/example/groove/: GorillaGamesTests.kt
frontend/: index.html  package-lock.json
frontend/src/: index.js  index.less
frontend/src/components/game-queue/: game-queue.js
frontend/src/components/site-wrapper/: site-wrapper.js  site-wrapper.less
frontend/src/components/tetris-container/: tetris-container.js
frontend/src/services/: api.js  util.js
games/: README.md  deploy-games.sh
games/blocks/: .gitignore  CMakeLists.txt  block.cpp  block.h  direction.h  emcc-build.sh  emcc_build.sh  game_cursor.cpp  game_cursor.h  game_grid.cpp  game_grid.h  hello_owl.cpp
games/blocks/src/: block.cpp  block.h  block_group.cpp  block_group.h  direction.h  frame_timing.h  game_board_generator.cpp  game_board_generator.h  game_cursor.cpp  game_cursor.h  game_grid.cpp  game_grid.h  game_state.cpp  game_state.h  main.cpp  sdl2_grid_renderer.cpp  sdl2_grid_renderer.h  sdl2_runner.cpp  sdl2_runner.h  sdl_game_textures.h
(+4 files in other folders)
